syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.br.zup";
option java_outer_classname = "RegisterKeyOuterClass";
option objc_class_prefix = "HLW";

package com.br.zup;

import "google/protobuf/timestamp.proto";

service ProtoRegisterKeyService {
  rpc registerKey (ProtoRegisterKeyRequest) returns (ProtoRegisterKeyResponse) {}
}

service ProtoRemoveKeyService {
  rpc removeKey (ProtoRemoveKeyRequest) returns (ProtoRemoveKeyResponse) {}
}

service ProtoQueryKeyService {
  rpc queryKey (ProtoQueryKeyRequest) returns (ProtoQueryKeyResponse) {}
}

service ProtoListKeyService {
  rpc listKeys (ProtoListKeyRequest) returns (ProtoListKeyResponse) {}
}

enum ProtoKeyType {
  UNKNOWN_KEY_TYPE = 0;
  CPF = 1;
  CELL_PHONE = 2;
  EMAIL = 3;
  RANDOM_KEY = 4;
}

enum ProtoAccountType {
  UNKNOWN_ACCOUNT_TYPE = 0;
  SAVINGS_ACCOUNT = 1;
  CHECKING_ACCOUNT = 2;
}

message ProtoRegisterKeyRequest {
  string clientId = 1;
  ProtoKeyType keyType = 2;
  string keyValue = 3;
  ProtoAccountType accountType = 4;
}

message ProtoRegisterKeyResponse {
  string pixId = 1;
}

message ProtoRemoveKeyRequest {
  string clientId = 1;
  string pixId = 2;
}

message ProtoRemoveKeyResponse {
  string clientId = 1;
  string pixId = 2;
}

message ProtoQueryKeyRequest {
  message ProtoPixIdClientId {
    string clientId = 1;
    string pixId = 2;
  }

  oneof ProtoQueryFilter {
    ProtoPixIdClientId pixId = 1;
    string key = 2;
  }
}

message ProtoQueryKeyResponse {
  message ProtoQueryPixKey {
    message ProtoQueryAccountInfo {
      ProtoAccountType type = 1;
      string institution = 2;
      string holderName = 3;
      string cpfHolder = 4;
      string agency = 5;
      string accountNumber = 6;
    }

    ProtoKeyType type = 1;
    string key = 2;
    ProtoQueryAccountInfo account = 3;
    google.protobuf.Timestamp createdAt = 4;
  }

  string clientId = 1;
  string pixId = 2;
  ProtoQueryPixKey pixKey = 3;
}

message ProtoListKeyRequest {
  string clientId = 1;
}

message ProtoListKeyResponse {
  message ProtoListObj {
    string pixId = 1;
    string clientId = 2;
    ProtoKeyType keyType = 3;
    string key = 4;
    ProtoAccountType accountType = 5;
    google.protobuf.Timestamp createdAt = 6;
  }

  repeated ProtoListObj keys = 1;
}